# works-on-my-machine

./: .clinerules  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  DOCUMENTATION_RULES.md  ENVIRONMENT_SETUP.md  MANIFEST.in  Makefile  PREREQUISITE_INSTALLER.md  PYPI_DEPLOYMENT.md  README.md  SECURITY_IMPROVEMENTS.md  TODO.md  build_exe.py  build_package.py  cliff.toml  cspell.json  exe_script.py  ignore-install.txt  index.html  init.bat  init.ps1  init.py  installer_script.py  lint.py  migrate_to_secure.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.in  requirements.dev.in  requirements.in  run_tests.py  setup.py  sitemap.xml  test_final.py  (+5 more)
.cspell-dict/: mots_abreviations.txt  mots_francais.txt  mots_techniques.txt
.github/workflows/: README_DOC.md  README_PUBLISH.md  auto-tag.yml  docs.yml  publish-pypi.yml  release.yml
.hooks/: README.md  hooks-usage.md  post-commit  post-commit.ps1  post-commit.sh  pre-commit  pre-commit.ps1  pre-commit.sh
.scripts/dev/: lint.py  update_readme_version.py
api/: index.html
api/architecture/: index.html
api/cli-architecture/: index.html
api/exceptions/: index.html
api/logging/: index.html
api/templates/: index.html
changelog/: index.html
cli/: index.html
cli/NEW/: index.html
cli/commands/: index.html
cli/context/: index.html
cli/git-hooks/: index.html
cli/install/: index.html
cli/lint/: index.html
cli/setup/: index.html
cli/spell/: index.html
cli/system/: index.html
cli/templates/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_01b0bdb957318b01___init___py.html  z_01b0bdb957318b01_display_py.html  z_03098a31cf886c48___init___py.html  z_03098a31cf886c48_python_lint_interface_py.html  z_0f05379f519e0410___init___py.html  z_0f05379f519e0410_command_service_py.html  z_0f05379f519e0410_file_service_py.html  z_0f05379f519e0410_security_service_py.html  z_0f05379f519e0410_validation_service_py.html  z_1617036fe3df48f6___init___py.html  z_1617036fe3df48f6_detector_service_py.html  z_1617036fe3df48f6_environment_service_py.html  z_1617036fe3df48f6_path_service_py.html  z_1626ca0182e77d41___init___py.html  z_1626ca0182e77d41___main___py.html  z_1626ca0182e77d41_cli_py.html  z_187d590dcc241de3___init___py.html  z_187d590dcc241de3_cspell_interface_py.html  z_187d590dcc241de3_cspell_service_py.html  z_23d5fd1c323296e6___init___py.html  z_23d5fd1c323296e6_display_py.html  z_25adc476d40feed9___init___py.html  z_28da6d37399b6fa8___init___py.html  z_28da6d37399b6fa8_display_py.html  z_2ba9806e5ccb5032___init___py.html  z_2ba9806e5ccb5032_create_interface_py.html  z_2ba9806e5ccb5032_detection_interface_py.html  z_2ba9806e5ccb5032_manager_interface_py.html  z_2ba9806e5ccb5032_setup_interface_py.html  z_2ba9806e5ccb5032_template_interface_py.html  z_2e2612eed82d1496___init___py.html  z_2e2612eed82d1496_deps_interface_py.html  z_2e2612eed82d1496_devtools_interface_py.html  z_2e2612eed82d1496_runtime_interface_py.html  z_2e2612eed82d1496_system_package_manager_interface_py.html  (+170 more)
diagrams/architecture/: index.html
diagrams/flows/: index.html
diagrams/install/: index.html
diagrams/lint/: index.html
diagrams/new/: index.html
diagrams/system/: index.html
docs/: DOCUMENTATION_RULES.md  ENVIRONMENT_SETUP.md  EXCEPTION_ARCHITECTURE.md  LOGGING_PATTERNS.md  PREREQUISITE_INSTALLER.md  README.md  changelog.md  coverage.md  getting-started.md  index.md
docs/api/: ARCHITECTURE.md  CLI_ARCHITECTURE.md  README.md  TEMPLATES_REFERENCE.md  architecture.md  cli-architecture.md  exceptions.md  index.md  logging.md  templates.md
docs/cli/: COMMON_COMMANDS.md  CONTEXT.md  GIT_HOOKS.md  INSTALL.md  LINT.md  NEW.md  README.md  SETUP.md  SPELL.md  SYSTEM.md  TEMPLATES.md  commands.md  context.md  git-hooks.md  index.md  install.md  lint.md  setup.md  spell.md  system.md  templates.md
docs/diagrams/: architecture-globale.md  architecture.md  flow-install.md  flow-lint.md  flow-new.md  flow-spell.md  flow-system.md  flow-uninstall.md  flows.md  install.md  lint.md  new.md  system.md
docs/examples/: index.md
docs/guides/: configuration.md  development.md  environment.md  index.md  prerequisites.md
docs/shared/: CLI_ARCHITECTURE.md
docs/tests/: README.md  index.md
examples/: index.html
getting-started/: index.html
guides/: index.html
guides/configuration/: index.html
guides/development/: index.html
guides/environment/: index.html
guides/prerequisites/: index.html
languages/: __init__.py
languages/javascript/: JAVASCRIPT.md
languages/python/: PYTHON.md
scripts/: list_user_path.py
search/: search_index.json
shared/: CLI_ARCHITECTURE.md  __init__.py  cli_manager.py  cspell_manager.py  dependency_manager.py  deploy-devtools.py  environment_manager.py  installer.py  prerequisite_installer.py  project_detector.py  secure_cli_manager.py  security_validator.py  system_detector.py  template_helpers.py  uninstaller.py  vscode_config.py
shared/configs/: cspell.global.json
shared/core/: cli_manager.py  lint_manager.py  prerequisite_manager.py  spell_manager.py  system_detector.py  template_helpers.py
shared/installation/: __init__.py  deploy-devtools.py  installer.py  path_manager.py  prerequisite_installer.py  uninstaller.py
shared/project/: __init__.py  environment_manager.py  project_detector.py  vscode_config.py
shared/security/: __init__.py  secure_cli_manager.py  security_validator.py
shared/system/: REGISTRATOR.md  register_wom_tools.py  registrator.ps1  registrator.py
shared/tools/: __init__.py  cspell_manager.py
shared/ui/: __init__.py  console.py  interactive.py  lint.py  panels.py  progress.py  prompts.py  spell.py  tables.py
stylesheets/: extra.css
tests/: README.md  __init__.py  conftest.py  index.html  pytest.ini  run_tests.py
tests/integration/: test_dummy_integration.py  test_javascript_creation.py  test_project_creation.py  test_python_creation.py  test_system_install_flow.py
tests/robustness/: __init__.py  (+1 more)
womm/: __init__.py  __main__.py  cli.py
(+527 files in other folders)
