[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "works-on-my-machine"
version = "1.0.0"
description = "Outils de développement universels pour Python et JavaScript - Installation automatique, configuration cross-platform, commandes globales"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dev", email = "dev@example.com"}
]
maintainers = [
    {name = "Dev", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["development-tools", "python", "javascript", "automation", "project-setup"]
requires-python = ">=3.8"
dependencies = [
    # Pas de dépendances principales pour l'instant - le projet utilise stdlib
]

[project.optional-dependencies]
dev = [
    # Outils de développement
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    
    # Tests
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/neuraaak/works-on-my-machine"
"Repository" = "https://github.com/neuraaak/works-on-my-machine"
"Bug Tracker" = "https://github.com/neuraaak/works-on-my-machine/issues"

[project.scripts]
# Scripts en ligne de commande principaux
"works-on-my-machine-init" = "init:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "languages*"]
exclude = ["tests*", "build*", "dist*"]

[tool.setuptools.package-data]
# Inclure tous les fichiers de templates et configurations
"*" = [
    "*.txt",
    "*.json",
    "*.yaml",
    "*.yml",
    "*.md",
    "*.template",
    "*.config.*",
    "templates/*",
    "configs/*",
    "vscode/*",
]

# Configuration Black
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

# Configuration isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = [".", "shared", "languages"]
skip = [".venv", "venv", "build", "dist"]

# Configuration MyPy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Plus flexible pour ce projet
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignorer certains modules pour lesquels on n'a pas de stubs
[[tool.mypy.overrides]]
module = "winreg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32*"
ignore_missing_imports = true

# Configuration Pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=shared",
    "--cov=languages",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=60",  # Plus flexible pour commencer
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "windows: marks tests specific to Windows",
    "unix: marks tests specific to Unix/Linux/Mac",
]

# Configuration Coverage
[tool.coverage.run]
source = ["shared", "languages", "."]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
    "build/*",
    "dist/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if platform.system\\(\\) == \"Windows\":",
    "except ImportError:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Configuration Bandit (sécurité)
[tool.bandit]
exclude_dirs = ["tests", "build", "dist", "venv", ".venv"]
skips = ["B101", "B601"]

# Configuration Ruff (alternative moderne à flake8)
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "S311"]
"init.py" = ["T201"]  # print statements ok dans le script d'init
"*/scripts/*" = ["T201"]  # print statements ok dans les scripts

[tool.ruff.mccabe]
max-complexity = 10