# ///////////////////////////////////////////////////////////////
# 🔨 BUILD SYSTEM
# Defines the build backend and requirements
# ///////////////////////////////////////////////////////////////

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ///////////////////////////////////////////////////////////////
# 📦 PROJECT METADATA
# Package information, version, authors, and classifiers
# ///////////////////////////////////////////////////////////////

[project]
name = "works-on-my-machine"
version = "3.2.3"
description = "Universal development tools for Python and JavaScript - Automatic installation, cross-platform configuration, global commands"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Neuraaak" }]
maintainers = [{ name = "Neuraaak" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "development-tools",
    "python",
    "javascript",
    "automation",
    "project-setup",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "ezplog>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    # Development tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",

    # Security
    "bandit>=1.7.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",

    # Tests
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",

    # Build and distribution
    "build>=1.0.0",
    "twine>=4.0.0",
    "pyinstaller>=5.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-coverage>=1.1.0",
    "git-cliff>=2.7.0",
]

# ///////////////////////////////////////////////////////////////
# 🔗 PROJECT URLS
# Links to repository, documentation, and package index
# ///////////////////////////////////////////////////////////////

[project.urls]
Homepage = "https://github.com/neuraaak/works-on-my-machine"
Documentation = "https://neuraaak.github.io/works-on-my-machine/"
Repository = "https://github.com/neuraaak/works-on-my-machine"
"Bug Tracker" = "https://github.com/neuraaak/works-on-my-machine/issues"
PyPI = "https://pypi.org/project/works-on-my-machine/"

# ///////////////////////////////////////////////////////////////
# 🖥️ SCRIPTS
# Entry points for command-line tools
# ///////////////////////////////////////////////////////////////

[project.scripts]
# Main CLI command
womm = "womm.cli:main"

# ///////////////////////////////////////////////////////////////
# 📦 SETUPTOOLS CONFIGURATION
# Package discovery and inclusion/exclusion patterns
# ///////////////////////////////////////////////////////////////

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["womm*"]
exclude = [
    "tests*",
    "build*",
    "dist*",
    "*.egg-info*",
    ".pytest_cache*",
    ".mypy_cache*",
    ".ruff_cache*",
    ".cursor*",
    "benchmarks*",
    "coverage*",
    "htmlcov*",
    ".venv*",
    "venv*",
    "node_modules*",
    ".vscode*",
    ".idea*",
    "__pycache__*",
    "**/__pycache__*",
    ".git*",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".coverage",
    "*.log",
    ".DS_Store",
    "Thumbs.db",
    "docs*",
    "setup.py",
    "Makefile",
]

[tool.womm.installation]
# Additional exclusions for local installation (womm install)
additional-exclude = [
    "ignore-install.txt",
    "MANIFEST.in",
    "womm.bat",
    "womm-installed.py",
    "*.tmp",
    "*.bak",
    "*.swp",
    "*.swo",
    ".tox",
    ".pre-commit-config.yaml",
    ".cspell-dict",
]

[tool.setuptools.package-data]
# Inclure les ressources non-Python du package womm (pour la wheel)
"womm" = [
    "*.py",
    "bin/*",
    "configs/*",
    "languages/*",
    "languages/**/*",
    "core/**/templates/*",
    "languages/**/templates/*",
    "languages/**/configs/*",
    "languages/**/vscode/*",
    "languages/**/scripts/*",
    "ide/**/*",
    "ide/**/templates/*",
]

# # ///////////////////////////////////////////////////////////////
# 🎨 CODE FORMATTING & LINTING TOOLS
# Auto-formatting, import sorting, and style checking
# ///////////////////////////////////////////////////////////////

# Black: Code formatter (88 char line length, Python 3.10+)
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | \.benchmarks
  | \.venv
  | venv
  | build
  | dist
  | htmlcov
  | \.vscode
  | __pycache__
  | \.egg-info
  | \.hooks
  | _temp
  | docs
  | examples
)/
'''

# isort: Import sorting (Black-compatible profile)
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["."]
skip = [
    ".venv",
    "venv",
    "build",
    "dist",
    ".pytest_cache",
    ".benchmarks",
    "htmlcov",
    ".vscode",
    "__pycache__",
    ".egg-info",
    ".hooks",
    "_temp",
    "docs",
    "examples",
]

# Ruff: All-in-one linter with comprehensive rule sets
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security
    "T20", # flake8-print
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "S101", # assert_used (for tests)
    "S106", # hardcoded_password_funcarg
    "T201", # print statements (for init.py and scripts)
    "S603", # subprocess.run without check=True
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S311", "E501", "ARG002"]
"examples/**/*" = ["T201", "E501"]
"womm/cli/**/*" = ["T201", "E501", "S603"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ///////////////////////////////////////////////////////////////
# ✅ TYPE CHECKING TOOLS
# Static type analysis with minimal and comprehensive modes
# ///////////////////////////////////////////////////////////////

# ty: Type checking with minimal configuration
[tool.ty.environment]
# Target Python version
python-version = "3.10"

# Project root paths (first-party modules)
root = [".", "./womm"]

[tool.ty.src]
# Files to check
include = ["womm/**/*.py"]

# Files/directories to exclude
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "tests",
    "docs",
    "examples",
]

# Respect .gitignore
respect-ignore-files = true

[tool.ty.terminal]
# Output format (full or concise)
output-format = "full"

# Warnings are not treated as errors
error-on-warning = false

# Pyright: Comprehensive type checking with detailed reporting
[tool.pyright]
# Target Python version
pythonVersion = "3.10"

# Type checking mode (off, basic, standard, strict)
typeCheckingMode = "basic"

# Include/exclude paths
include = ["womm"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "tests",
    "docs",
    "examples",
]

# Reporting rules: flag missing imports and duplicates
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true

# Optional type checking (None safety)
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

# Tolerance for decorators and complex types
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false

# Override and consistency checks
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true

# ///////////////////////////////////////////////////////////////
# 🧪 TESTING & COVERAGE TOOLS
# Test execution, coverage analysis, and test configuration
# ///////////////////////////////////////////////////////////////

# Pytest: Test runner with markers and coverage configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=womm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=50",
    "--verbose",
    "--tb=short",
    "--color=yes",
    "--durations=10",
    "--maxfail=5",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests (default)",
    "cli: marks tests related to CLI",
    "compiler: marks tests related to compilers",
    "uploader: marks tests related to uploaders",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage: Code coverage measurement and reporting
[tool.coverage.run]
source = ["womm"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.pytest_cache/*",
    "*/.benchmarks/*",
    "*/.vscode/*",
    "*/.egg-info/*",
    "*/.hooks/*",
    "setup.py",
    "build/*",
    "dist/*",
    ".venv/*",
    "venv/*",
    "htmlcov/*",
    "coverage.xml",
    ".coverage",
    "docs/*",
    "examples/*",
    "_temp/*",
]

[tool.coverage.report]
# Lines to exclude: comments, abstractions, unreachable code
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if platform.system\\(\\) == \"Windows\":",
    "except ImportError:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# ///////////////////////////////////////////////////////////////
# 🔒 SECURITY TOOLS
# Code security scanning and vulnerability detection
# ///////////////////////////////////////////////////////////////

# Bandit: Security linter for identifying common security issues
[tool.bandit]
exclude_dirs = [
    "tests",
    "build",
    "dist",
    "venv",
    ".venv",
    ".hooks",
    "docs",
    "examples",
    "_temp",
]
skips = ["B101", "B601"]